:lipstick: Fix alignment

--- a/public/src/_styles/index.css
+++ b/public/src/_styles/index.css
@@ -59,7 +59,7 @@ a {
 
 .btn > a {
 	color: var(--primary);
-	transform: translate(0, -2px);
+	transform: translate(0, -4px);
 }
 
 .btn > img {
